# EPSSFromSuricata

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  suricata_logs.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/alerts/: models.py  router.py  schemas.py  service.py
backend/src/epss/: client.py  exceptions.py  models.py  service.py
backend/src/suricata/: models.py  parser.py  schemas.py  service.py
backend/tests/: conftest.py  test_service.py
backend/tests/alerts/: test_constants.py  test_dependencies.py  test_exceptions.py  test_models.py  test_router.py  test_schemas.py
backend/tests/epss/: conftest.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_schemas.py  test_service.py
backend/tests/suricata/: conftest.py  test_constants.py  test_exceptions.py  test_models.py  test_parser.py  test_schemas.py  test_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: alerts.ts  axios.ts
src/: config.py  database.py  main.py  pagination.py
src/alerts/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
src/epss/: client.py  config.py  models.py  schemas.py  service.py
src/suricata/: constants.py  exceptions.py  models.py  parser.py  schemas.py  service.py
suricata/: suricata.yaml
webint/: package-lock.json  package.json  pyproject.toml  tailwind.config.js
webint/src/: App.js  config.py  database.py  exceptions.py  index.js
(+22 files in other folders)
